--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   circular_reveal_animation: ^2.0.0
   page_transition: ^2.0.5
   introduction_screen: ^3.0.0
+  readmore: ^2.1.0
+  photo_view: ^0.13.0
+  syncfusion_flutter_pdfviewer: ^19.4.54-beta
 
 dev_dependencies:
   flutter_test:
