--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_auth: ^3.3.10
   carousel_slider: ^4.0.0
   intl: ^0.17.0
+  file_picker: ^4.5.1
 
 dev_dependencies:
   flutter_test:
