--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   carousel_slider: ^4.0.0
   intl: ^0.17.0
   file_picker: ^4.5.1
+  month_year_picker: ^0.1.0+1
+  syncfusion_flutter_charts: ^19.4.56
 
 dev_dependencies:
   flutter_test:
