--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   file_picker: ^4.5.1
   month_year_picker: ^0.1.0+1
   syncfusion_flutter_charts: ^19.4.56
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
