--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   month_year_picker: ^0.1.0+1
   syncfusion_flutter_charts: ^19.4.56
   http: ^0.13.4
+  dart_ipify: ^1.1.1
 
 dev_dependencies:
   flutter_test:
