--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   syncfusion_flutter_charts: ^19.4.56
   http: ^0.13.4
   dart_ipify: ^1.1.1
+  cached_network_image: ^3.2.0
 
 dev_dependencies:
   flutter_test:
