--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,43 +27,40 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cached_network_image: ^3.2.0
+  carousel_slider: ^4.0.0
+  circular_reveal_animation: ^2.0.0
+  cupertino_icons: ^1.0.2
+  dart_ipify: ^1.1.1
+  dotted_border: ^2.0.0+2
+  file_picker: ^4.5.1
+  firebase_auth: ^3.3.10
+  firebase_core: ^1.15.0
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  circular_reveal_animation: ^2.0.0
-  page_transition: ^2.0.5
-  introduction_screen: ^3.0.0
-  readmore: ^2.1.0
-  photo_view: ^0.13.0
-  syncfusion_flutter_pdfviewer: ^19.4.54-beta
-  dotted_border: ^2.0.0+2
-  firebase_auth: ^3.3.10
-  carousel_slider: ^4.0.0
-  intl: ^0.17.0
-  file_picker: ^4.5.1
-  month_year_picker: ^0.1.0+1
-  syncfusion_flutter_charts: ^19.4.56
+  google_sign_in: ^5.3.0
   http: ^0.13.4
-  dart_ipify: ^1.1.1
-  cached_network_image: ^3.2.0
+  intl: ^0.17.0
+  introduction_screen: ^3.0.0
+  month_year_picker: ^0.1.0+1
+  page_transition: ^2.0.5
+  photo_view: ^0.13.0
+  readmore: ^2.1.0
+  syncfusion_flutter_charts: ^19.4.56
+  syncfusion_flutter_pdfviewer: ^19.4.54-beta
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  flutter_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
   # The following line ensures that the Material Icons font is
@@ -75,13 +72,10 @@ flutter:
   assets:
     - assets/images/
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
@@ -118,6 +112,5 @@ flutter:
         - asset: fonts/Poppins-SemiBoldItalic.ttf
         - asset: fonts/Poppins-Thin.ttf
         - asset: fonts/Poppins-ThinItalic.ttf
-
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
