--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   readmore: ^2.1.0
   syncfusion_flutter_charts: ^19.4.56
   syncfusion_flutter_pdfviewer: ^19.4.54-beta
+  url_launcher: ^6.1.0
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
