--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,8 @@ dependencies:
   readmore: ^2.1.0
   syncfusion_flutter_charts: ^19.4.56
   syncfusion_flutter_pdfviewer: ^19.4.54-beta
-  url_launcher: ^6.1.0
+  url_launcher: ^6.0.17
+  webview_flutter: ^3.0.2
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
