--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   circular_reveal_animation: ^2.0.0
   cupertino_icons: ^1.0.2
   dart_ipify: ^1.1.1
+  dio: ^4.0.6
   dotted_border: ^2.0.0+2
   file_picker: ^4.5.1
   firebase_auth: ^3.3.10
@@ -40,6 +41,7 @@ dependencies:
     sdk: flutter
   google_sign_in: ^5.3.0
   http: ^0.13.4
+  http_parser: ^4.0.0
   intl: ^0.17.0
   introduction_screen: ^3.0.0
   month_year_picker: ^0.1.0+1
